--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,7 @@ body {
     --popover-foreground: 0 0% 3.9%;
     --primary: 204 95% 41%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 206 49% 23;
+    --secondary: 206 49% 23%;
     --secondary-foreground: 0 0% 100%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
